crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__porcelain_spaces_in_names.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: files
---
[
    "my file.txt",
    "ath with spaces/file.rs",
    "\"quoted name.txt\"",
]
