crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__short_commit_empty_string.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx.short_commit()
---
Some(
    "",
)
